FIX "Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode."

--- a/src/css/structure/modules/infragistics.ui.grid.css
+++ b/src/css/structure/modules/infragistics.ui.grid.css
@@ -48,6 +48,20 @@
     width : 100%;
 }
 
+/* BUG 246065 Marin Popov 23.12.2017 Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode.*/
+.ui-iggrid-headertable-mrl-scrollable {
+    border-spacing: 0;
+    border-collapse: separate;
+}
+.ui-iggrid-headertable-mrl-scrollable th:not(:last-of-type) {
+    border-right: 0;
+}
+
+.ui-iggrid-headertable-mrl-scrollable th[colspan="1"][rowspan="1"]:last-of-type {
+    border-right: 0;
+}
+/* BUG 246065 END */
+
 .ui-iggrid > .ui-widget-header.ui-helper-reset {
     border-width : 0;
 }
